--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -20,15 +20,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="LineSegment.h" />
     <ClInclude Include="Point2D.h" />
     <ClInclude Include="Timer.h" />
-    <ClInclude Include="TimerFunction.h" />
+    <ClInclude Include="Viewport.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="LineSegment.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Point2D.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Viewport.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{968adf83-5464-45e5-8f61-56fda6ed2ac5}</ProjectGuid>
