--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="Engine.h" />
     <ClInclude Include="LineSegment.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Point2D.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Viewport.h" />
@@ -29,6 +30,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="LineSegment.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point2D.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Viewport.cpp" />
